Profile and Dashboard edited

--- a/index.html
+++ b/index.html
@@ -2,9 +2,41 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>P2P Platform</title>
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="/favicon.png" />
+
+    <!-- Title & Description -->
+    <title>Stratizen | P2P Student Platform</title>
+    <meta
+      name="description"
+      content="Stratizen — Empower the campus, shape the future. A decentralized peer-to-peer platform for students at Strathmore University."
+    />
+
+    <!-- Open Graph -->
+    <meta property="og:title" content="Stratizen | P2P Student Platform" />
+    <meta
+      property="og:description"
+      content="Empower the campus, shape the future. Join Stratizen for collaboration, innovation, and student-driven growth."
+    />
+    <meta property="og:image" content="/stratizen-preview.png" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://stratizen.com" />
+
+    <!-- Theme -->
+    <meta name="theme-color" content="#0f172a" />
+
+    <!-- Apple Touch Icon -->
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+
+    <!-- Fonts (optional) -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div id="root"></div>
